# codex-patcher-cc

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
.omc/state/: hud-stdin-cache.json  last-tool-error.json
.omc/state/sessions/c09a57ca-3f7d-44b6-9dfb-ee63c360ba98/: hud-state.json
ccp/: __init__.py  __main__.py  deep_scan.py  instr_patcher.py  runtime.py  scanner.py  updater.py
contrib/frida/: README.md  codex-bypass.js  codex-frida-wrapper.sh
contrib/r2-scripts/: find-gates.r2
contrib/rules/: AGENTS.md  AUTHORIZATION.md  codex-config.toml
contrib/wrappers/: codex
docs/: ARCHITECTURE.md  GATES.md  RE-METHODOLOGY.md
patches/: 01-config-bypass-defaults.json  02-wrapper-bypass-flags.json  10-rust-refusal-strings.json  11-seatbelt-allow-default.json  12-instr-network-connect-allow.json  13-instr-exec-policy-forbidden-on-never-nop.json
scripts/: dev-verify.sh
tests/: test_binary_format_detection.py  test_cli_loads.py  test_cli_subcommands.py  test_deep_scan.py  test_instr_patcher.py  test_patches_have_required_fields.py  test_patches_valid_json.py  test_runtime_assets.py
